2006-10-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-volume.c: (bacon_volume_button_new): update from libbacon
	to add perceived names to the volume button itself, as well as +/-
	(Closes: #365557)

2006-10-30  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: add relationships between property name labels
	and the property value labels (label-for and labelled-by)
	(Closes: #365203)

2006-10-30  Bastien Nocera  <hadess@hadess.net>

	* COPYING: fix typo spotted by Alexander Bostrom (Closes: #366278)

2006-10-29  Christian Persch  <chpe@cvs.gnome.org>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new): Sink the floating reference. Bug #366452.

2006-10-29  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c:
	(my_gnome_vfs_get_mime_type_with_data): initialise bytes_read
	to avoid problems with gnome-vfs not initialising it
	(See bug #366331)

2006-10-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-mozilla-viewer.c: (on_error_event),
	(totem_embedded_add_children):
	  Catch errors that occur after we initiated playback (#361787).

2006-10-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (bvw_bus_message_cb),
	(bacon_video_widget_open_with_subtitle), (bacon_video_widget_play):
	  Don't go through lots of trouble to catch errors and fake non-async
	  behaviour to the frontend when the frontend doesn't even check for
	  errors. In other words: skip poll_for_state_change() and handle
	  errors asynchroneously if the frontend supplies a NULL error,
	  otherwise errors may be lost in some corner cases (#361787).

2006-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_remote),
	(totem_action_handle_key_press): fix remotely setting whether to
	show the controls, and trying to use the deinterlace on/off key
	shortcut

2006-10-27  Bastien Nocera  <hadess@hadess.net>
