@@ -1,5 +1,11 @@
 2006-10-30  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-playlist.c: (totem_playlist_save_add_format_combo_box):
+	Add relationships between the "select playlist format" label and
+	combobox (Closes: #367606)
+
+2006-10-30  Bastien Nocera  <hadess@hadess.net>
+
 	* src/bacon-volume.c: (bacon_volume_button_new): update from libbacon
 	to add perceived names to the volume button itself, as well as +/-
 	(Closes: #365557)
